fix collapse of layout at page prev and next icons

--- a/app/assets/stylesheets/mypage.css.scss
+++ b/app/assets/stylesheets/mypage.css.scss
@@ -160,7 +160,7 @@
 
 #article_controller {
 //  border: 2px solid #ddd;
-  width: 100%;
+  width: 800px;
 
   float: left;
   margin-top: -15px;
@@ -203,7 +203,6 @@
 
   #page_ejection {
     float: right;
-    margin-right: 70px;
     border: 2px solid #ddd;
     border-radius: 0.3em;
     background-color: white;
@@ -212,6 +211,7 @@
     ul {
       list-style: none;
       margin-top: 0px;
+      margin-left: 0px;
       height: 100%;
       li {
         float: left;
